--- a/src/personal_site/styles/buttons.css
+++ b/src/personal_site/styles/buttons.css
@@ -15,6 +15,7 @@ div.button {
   background-color: rgba(0,0,0,0.7);
   margin: 1.5em auto auto auto;
   display: inline-block;
+  min-width: 100px;
   width: 10%;
   height: 2em;
   border-radius: 1em;
